Issue 12384043: SITE-1496: Page for merging in review queue is cut off

--- a/www/review/css/flagcontent.css
+++ b/www/review/css/flagcontent.css
@@ -46,6 +46,8 @@
     height: 100%;
 }
 .topic-frame {
+    height: 100%;
+    margin-bottom: -58px;
     overflow:hidden;
 
     /* HACK: Following transform fixes the bug when fixed footer was
@@ -72,7 +74,6 @@
 }
 .flagreview-header {
     position:relative;
-    height: 100%;
     background-color: #fcf3db;
     padding: .5em;
     margin: 0;
